--- a/app/App_Resources/Android/app.gradle
+++ b/app/App_Resources/Android/app.gradle
@@ -13,3 +13,7 @@ android {
     additionalParameters "--no-version-vectors"  
   }  
 } 
+
+project.ext {
+    googlePlayServicesVersion = "9.6.1"
+}
