--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nativescript-camera": "0.0.8",
     "nativescript-geolocation": "0.0.15",
     "nativescript-google-maps-sdk": "^1.4.1",
+    "nativescript-telerik-ui": "^1.5.1",
     "nativescript-theme-core": "^0.2.1",
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-beta.12",
