--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "2.1.2",
     "@angular/platform-browser-dynamic": "2.1.2",
     "@angular/router": "3.1.2",
+    "nativescript-actioncable": "0.0.2",
     "nativescript-angular": "1.1.3",
     "nativescript-camera": "0.0.8",
     "nativescript-geolocation": "0.0.15",
     "nativescript-google-maps-sdk": "^1.4.1",
     "nativescript-telerik-ui": "^1.5.1",
     "nativescript-theme-core": "^0.2.1",
+    "nativescript-websockets": "^1.3.1",
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-beta.12",
     "tns-core-modules": "^2.4.0"
