--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "nativescript-camera": "0.0.8",
     "nativescript-geolocation": "0.0.15",
     "nativescript-google-maps-sdk": "^1.4.1",
-    "nativescript-telerik-ui": "^1.5.1",
+    "nativescript-socket.io": "^0.5.0",
     "nativescript-theme-core": "^0.2.1",
-    "nativescript-websockets": "^1.3.1",
+    "nativescript-websockets": "^1.3.3",
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-beta.12",
     "tns-core-modules": "^2.4.0"
